assets/scss/3000-menubar-base.scss
/*! Copyright 2007-2009,2017-2018 Daniel F. Dickinson <cshored@thecshore.com>
 * Released under the Creative Commons BY (Attribution) 4.0 License
 */
/* The C Shore Generic Styling Elements for the menubar */

/* Remember, for the level of specificity last rule wins, hence
 *   most important rules are last
*/

.Sitemenu {
  position: relative;
  top: 0;
  z-index: 20;
  display: inline-flex;
  flex: 2 1 60%;
  flex-wrap: nowrap;
  align-content: stretch;
  justify-content: stretch;
  align-items: stretch;
  align-self: stretch;
  margin-left: 2em;
  & > .SitemenuList {
    display: inline-flex;
    flex: 1 1 100%;
    flex-flow: row wrap;
    align-content: space-around;
    justify-content: space-between;
    align-items: center;
    position: relative;
    top: 0;
    right: 0;
    z-index: 20;
    list-style: none;
    margin: 0;
    padding: 0;
    & > .MenuItem {
      flex: 0 2 7em;
      margin-left: .4em;
      margin-bottom: .4em;
      text-align: center;
      max-width: 8em;
      overflow: hidden;
      overflow: ellipsis;
      padding: 0;
      & > div {
        & > .MenuEntry {
          & > .MenuLink {
            padding-top: .2em;
            padding-bottom: .2em;
          }
        }
      }
      & .MenuParent {
        display: none;
        margin: 0;
        padding: 0;
        & .MenuItem {
          display: none;
        }
      }
    }
    & > .TopSearch {
      display: inline-flex;
      flex: 2 1 7em;
      margin-left: .4em;
      align-self: center;
      & form {
        display: inline-flex;
        flex: 2 1 5em;
        flex-wrap: nowrap;
        justify-content: flex-end;
        & input[type=search] {
          display: inline-block;
          flex: 1 2 2em;
        }
        & input[type=submit] {
          display: inline-block;
          flex: 0 1 1em;
        }
      }
    }
  }
}

.SitemenuList {
  & .MenuItem {
    list-style: none inside;
    text-align: left;
    width: 100%;
    display: block;
    margin: 0;
    padding: 0;
    & div {
      width: 100%;
      display: block;
      & .MenuEntry {
        display: block;
        width: 100%;
        & .MenuLink {
          display: block;
          width: 100%;
          text-decoration: none;
        }
      }
    }
    & .MenuParent {
      width: 100%;
      display: none;
      list-style: none inside;
      margin: 0;
      padding: 0;
      & .MenuItem {
        width: 100%;
        list-style: none inside;
        margin: 0;
        padding: 0;
       }
    }
  }
}

.Sitemenu {
  .SitemenuList {
    list-style: none inside;
    & > .MenuItem {
      list-style: none inside;
      & div {
        & .MenuEntry {
          & .MenuLink {
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
          }
        }
      }
      & .MenuParent {
        list-style: none inside;
        & div {
          display: block;
          & .MenuEntry {
            display: block;
            & .MenuLink {
              display: block;
              white-space: nowrap;
              overflow: hidden;
              text-overflow: ellipsis;
            }
          }
        }
      }
    }
  }
}

.Sitemenu .MenuParent .MenuParent {
  display: none;
  list-style: none inside;
}

.Sitemenu {
  .SitemenuList {
    & > .MenuItem {
      list-style: none inside;
      position: relative;
      top: 0;
      right: 0;
      &:hover,
      &:active {
        & > .MenuParent {
          list-style: none inside;
          display: block;
          position: absolute;
          top: 100%;
          right: 33%;
          z-index: 22;
          & > .MenuItem {
            display: block;
          }
          &:hover,
          &:active {
            & .MenuItem {
              list-style: none inside;
              display: block;
              position: relative;
              & .MenuParent {
                display: none;
              }
              &:hover,
              &:active {
                & .MenuParent {
                  display: block;
                  position: absolute;
                  top: -100%;
                  right: 33%;
                  z-index: 24;
                  & > .MenuItem {
                    display: block;
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}

